// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`autoLogOps decorate each method correctly 1`] = `
Object {
  "operation": "operationFunctionA",
}
`;

exports[`autoLogOps decorate each method correctly 2`] = `
Array [
  Array [
    Object {
      "operation": "operationFunctionA",
    },
  ],
  Array [
    Object {
      "operation": "operationFunctionA",
      "result": "success",
    },
  ],
]
`;

exports[`autoLogOps decorate each method correctly 3`] = `
Object {
  "operation": "operationFunctionB",
}
`;

exports[`autoLogOperation logs correctly operation failure of async function 1`] = `
Array [
  Array [
    Object {
      "operation": "operationFunction",
    },
  ],
  Array [
    Object {
      "action": "callFunction",
      "operation": "operationFunction",
    },
  ],
]
`;

exports[`autoLogOperation logs correctly operation failure of async function 2`] = `
Array [
  Array [
    Object {
      "action": "callFunction",
      "category": "CUSTOM_ERROR",
      "message": "foo",
      "operation": "operationFunction",
      "result": "failure",
      "status": 500,
    },
  ],
  Array [
    Object {
      "category": "CUSTOM_ERROR",
      "message": "foo",
      "operation": "operationFunction",
      "result": "failure",
      "status": 500,
    },
  ],
]
`;

exports[`autoLogOperation logs correctly operation failure of async function 3`] = `
Array [
  Array [
    Object {
      "message": "foo",
      "status": 500,
    },
  ],
]
`;

exports[`autoLogOperation logs correctly operation failure of non-async function 1`] = `
Array [
  Array [
    Object {
      "operation": "operationFunction",
    },
  ],
  Array [
    Object {
      "action": "callFunction",
      "operation": "operationFunction",
    },
  ],
]
`;

exports[`autoLogOperation logs correctly operation failure of non-async function 2`] = `
Array [
  Array [
    Object {
      "action": "callFunction",
      "category": "CUSTOM_ERROR",
      "message": "foo",
      "operation": "operationFunction",
      "result": "failure",
      "status": 500,
    },
  ],
  Array [
    Object {
      "category": "CUSTOM_ERROR",
      "message": "foo",
      "operation": "operationFunction",
      "result": "failure",
      "status": 500,
    },
  ],
]
`;

exports[`autoLogOperation logs correctly operation failure of non-async function 3`] = `
Array [
  Array [
    Object {
      "message": "foo",
      "status": 500,
    },
  ],
]
`;

exports[`autoLogOperation logs correctly operatoin success with operationFunction name and sub actions 1`] = `
Array [
  Array [
    Object {
      "operation": "operationFunction",
    },
  ],
  Array [
    Object {
      "action": "callFunction",
      "operation": "operationFunction",
    },
  ],
  Array [
    Object {
      "action": "callFunction",
      "operation": "operationFunction",
      "result": "success",
    },
  ],
  Array [
    Object {
      "operation": "operationFunction",
      "result": "success",
    },
  ],
]
`;

exports[`autoLogOperation logs correctly req.meta from previous middlewares 1`] = `
Object {
  "operation": "operationFunction",
  "transactionId": "xxxx-xxxx",
}
`;

exports[`autoLogOperation logs correctly req.meta from previous middlewares 2`] = `
Array [
  Array [
    Object {
      "operation": "operationFunction",
      "transactionId": "xxxx-xxxx",
    },
  ],
  Array [
    Object {
      "operation": "operationFunction",
      "result": "success",
      "transactionId": "xxxx-xxxx",
    },
  ],
]
`;
